--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -1,40 +1,87 @@
-.banner{
+.banner {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  .banner__overlay {
+    height: 100%;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: -99;
+    background: black;
+    opacity: 0.3;
+  }
 
-    .banner__overlay{
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        z-index: -99;
-        background: black;
-        opacity: 0.3;
-    }
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    object-fit: cover;
+    object-position: center;
+    z-index: -100;
+  }
 
-    video{
-        position: absolute;
-        top: 0;
-        left: 0;
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        object-fit: cover;
-        object-position: center;
-        z-index: -100;
-    }
+  .banner__content {
+    position: relative;
+    text-align: center;
+    z-index: 3;
 
-    .banner__content{
-        position: relative;
-        text-align: center;
-        z-index: 3;
+    div {
+      h1 {
+        font-size: 10vw;
+      }
+
+      p {
+        font-size: 4vw;
+      }
     }
-        
+  }
 }
+
+
+  .banner__arrow {
+    width: 75px;
+    height: 65px;
+    
+    &:hover {
+      
+      polygon {
+        fill: #FFF;
+        transition: all .2s ease-out;
+  
+        &.arrow-bottom {
+          transform: translateY(-18px);
+        }
+  
+        &.arrow-top {
+          transform: translateY(18px);
+        }
+        
+      }
+    
+    }
+    
+  }
+  
+  polygon {
+    fill: #FFF;
+    transition: all .2s ease-out;
+      
+    &.arrow-middle {
+        opacity: 0.75;
+      }
+  
+      &.arrow-top {
+        opacity: 0.5
+      }
+       
+  }
