--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
 a {
   color: white;
   text-decoration: none; }
@@ -87,33 +92,38 @@ body::-webkit-scrollbar-thumb{
       font-size: 10vw; }
     .banner .banner__content div p {
       font-size: 4vw; }
-    .banner .banner__content div .banner__content__arrow {
-      display: inline-block;
-      width: 25px;
-      height: 25px;
-      border-top: 2px solid white;
-      border-right: 2px solid white;
-      transform: rotate(135deg); }
+
+.banner__arrow {
+  position: absolute;
+  left: 0;
+  bottom: 30px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  justify-content: center; }
+  .banner__arrow .banner__content__arrow {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border-top: 2px solid white;
+    border-right: 2px solid white;
+    transform: rotate(135deg);
+    cursor: pointer; }
 
 .who {
-  background-color: #e9c46a; }
+  background-color: #e9c46a;
+  letter-spacing: .17px; }
 
-.who__image div {
-  width: 100%;
-  height: 100%;
-  height: 200px;
-  background-image: url("../../img/who.svg");
-  background-repeat: no-repeat;
-  background-position: center; }
+.who__content .who__content__icon img {
+  max-width: 100%;
+  max-height: 440px; }
 
-.who__text__btn button {
-  padding: 12px;
-  border: 2px solid white;
-  color: white; }
+.who__content .who__content__text h2 {
+  font-size: 42px;
+  padding-bottom: 10px; }
 
-.who__text__btn button:hover {
-  color: #a8dadc;
-  background-color: white; }
+.who__content .who__content__text p {
+  font-size: 20px; }
 
 .product__content {
   cursor: pointer; }
