--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ a:hover {
   color: white; }
 
 body {
-  color: white; }
+  color: white;
+  background-color: #6aaebf; }
 
 /* body::-webkit-scrollbar{
     width: 10px;
@@ -111,7 +112,6 @@ body::-webkit-scrollbar-thumb{
     cursor: pointer; }
 
 .who {
-  background-color: #e9c46a;
   letter-spacing: .17px; }
 
 .who__content .who__content__icon img {
@@ -125,17 +125,42 @@ body::-webkit-scrollbar-thumb{
 .who__content .who__content__text p {
   font-size: 20px; }
 
-.product__content {
+.service__content div {
+  box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
+  margin: 10px;
+  padding: 10px;
   cursor: pointer; }
-  .product__content span {
-    outline: 2px solid white; }
-  .product__content img {
-    width: 200px; }
-  .product__content h4 {
-    margin-top: 15px; }
+  .service__content div h6 {
+    margin-top: 20px;
+    margin-bottom: 20px; }
+  .service__content div img {
+    max-width: 100%;
+    max-height: 200px;
+    padding: 10px; }
+  .service__content div span {
+    position: relative; }
+    .service__content div span button {
+      margin-bottom: 10px;
+      color: white;
+      border: 2px solid white; }
+    .service__content div span button:hover {
+      background-color: white;
+      color: #6aaebf; }
 
-.product__content:hover {
-  outline: 2px solid white; }
+.service__content div:hover {
+  animation: shake .4s 1;
+  animation-delay: .2s; }
 
-.product__content__button div div button {
-  color: white; }
+@keyframes shake {
+  0% {
+    transform: rotate(3deg); }
+  20% {
+    transform: rotate(-3deg); }
+  40% {
+    transform: rotate(3deg); }
+  60% {
+    transform: rotate(-3deg); }
+  80% {
+    transform: rotate(3deg); }
+  100% {
+    transform: rotate(0); } }
