--- a/scss/views/_service.scss
+++ b/scss/views/_service.scss
@@ -1,28 +1,55 @@
-.product__content{
+.service__content{
 
-    cursor: pointer;
+    div{
+        box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
+        margin: 10px;
+        padding: 10px;
+        cursor: pointer;
+        
 
-    span {
-        outline: 2px solid white;
+        h6{
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+        
+        img{
+            max-width: 100%;
+            max-height: 200px;
+            padding: 10px;
+        }
+
+        span {
+            position: relative;
+            
+
+            button {
+                margin-bottom: 10px;
+                color: white;
+                border: 2px solid white;
+               
+            }
+
+            button:hover{
+
+                background-color: white;
+                color:  rgba($color: #6AAEBF, $alpha: 1);
+                
+            }
+        }
     }
 
-    img{
-        width: 200px;
+    div:hover{
+        animation: shake .4s 1;
+        animation-delay:.2s;
     }
-
-    h4{
-        margin-top: 15px;
-    }
+   
 }
 
-.product__content:hover{
-    outline: 2px solid white;
-
-}
-
-.product__content__button{
-
-    div div button{
-        color: white;
-    }
-}
+@keyframes shake{
+    0%{ transform:rotate(3deg) }
+    20%{ transform:rotate(-3deg) }
+    40%{ transform:rotate(3deg) }
+    60%{ transform:rotate(-3deg) }
+    80%{ transform:rotate(3deg) }
+    100%{ transform:rotate(0) }
+  }
