--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,52 @@ body::-webkit-scrollbar-thumb{
     transform: rotate(3deg); }
   100% {
     transform: rotate(0); } }
+
+.travel__title {
+  margin-top: 50px; }
+
+.travel__arrows {
+  margin-top: 30px; }
+
+.travel__arrows__content {
+  white-space: nowrap;
+  text-align: center; }
+  .travel__arrows__content li {
+    font-size: 20px;
+    font-weight: 700;
+    display: inline-block;
+    line-height: 26px;
+    margin: 0 9px 0 -10px;
+    padding: 0 20px;
+    position: relative;
+    letter-spacing: 1px;
+    text-decoration: none; }
+
+.travel__arrows__content li::before,
+.travel__arrows__content li::after {
+  border-right: 1px solid white;
+  content: '';
+  display: block;
+  height: 50%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: -1;
+  transform: skewX(45deg); }
+
+.travel__arrows__content li::after {
+  bottom: 0;
+  top: auto;
+  transform: skewX(-45deg); }
+
+.travel__arrows__content li:last-of-type::before,
+.travel__arrows li:last-of-type::after {
+  display: none; }
+
+/* .travel__arrows__content li:nth-of-type(1) a { color: white(0, 0%, 70%); } 
+.travel__arrows__content li:nth-of-type(2) a { color: white(0, 0%, 65%); } 
+.travel__arrows__content li:nth-of-type(3) a { color: white(0, 0%, 50%); } 
+.travel__arrows__content li:nth-of-type(4) a { color: white(0, 0%, 45%); } */
+.contact__title {
+  margin-top: 50px; }
