--- a/scss/utilities/_base.scss
+++ b/scss/utilities/_base.scss
@@ -5,17 +5,17 @@
 }
 
 a{
-    color: white;
+    color: #ffffff;
     text-decoration: none;
 }
 
 a:hover{
-    color: white;
+    color: #ffffff;
 }
 
 body{
-    color: white;
-    background-color: rgba($color: #6AAEBF, $alpha: 1);
+    color: #ffffff;
+    background-color: rgba($color: #3FB0AC  , $alpha: 1);
 }
 
 /* body::-webkit-scrollbar{
