--- a/scss/views/_travel.scss
+++ b/scss/views/_travel.scss
@@ -1,10 +1,10 @@
 
 .travel__title{
-    margin-top: 50px;
+    padding-top: 50px;
 }
 
 .travel__arrows{
-    margin-top: 30px;
+    padding-top: 30px;
 }
 
 .travel__arrows__content { 
