--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body::-webkit-scrollbar-thumb{
     left: 0px;
     z-index: -99;
     background: black;
-    opacity: 0.3; }
+    opacity: 0.4; }
   .banner video {
     position: absolute;
     top: 0;
@@ -142,6 +142,7 @@ body::-webkit-scrollbar-thumb{
     position: relative; }
     .service__content div span button {
       margin-bottom: 10px;
+      margin-left: 10px;
       color: white;
       border: 2px solid white; }
     .service__content div span button:hover {
@@ -167,6 +168,9 @@ body::-webkit-scrollbar-thumb{
   100% {
     transform: rotate(0); } }
 
+#travel {
+  min-height: 600px; }
+
 .travel__title {
   padding-top: 50px; }
 
@@ -186,6 +190,8 @@ body::-webkit-scrollbar-thumb{
     position: relative;
     letter-spacing: 1px;
     text-decoration: none; }
+    .travel__arrows__content li a {
+      text-decoration: none; }
 
 .travel__arrows__content li::before,
 .travel__arrows__content li::after {
@@ -213,6 +219,73 @@ body::-webkit-scrollbar-thumb{
 .travel__arrows__content li:nth-of-type(2) a { color: white(0, 0%, 65%); } 
 .travel__arrows__content li:nth-of-type(3) a { color: white(0, 0%, 50%); } 
 .travel__arrows__content li:nth-of-type(4) a { color: white(0, 0%, 45%); } */
+.travel__form {
+  box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
+  padding: 30px;
+  /* .travel__contenedor__cities:hover{
+        outline: 3px solid white;  
+    }*/ }
+  .travel__form div div label {
+    margin-bottom: 10px; }
+  .travel__form div div input {
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    border-bottom: 2px solid white;
+    margin-bottom: 10px; }
+  .travel__form div div input:focus {
+    background-color: transparent;
+    border-bottom: 2px solid white;
+    outline: none;
+    outline-width: 0;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none; }
+  .travel__form div div input::-webkit-outer-spin-button,
+  .travel__form div div input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; }
+  .travel__form div div button {
+    width: 100%;
+    border: 2px solid white;
+    color: white;
+    border-radius: 0;
+    margin-top: 20px; }
+  .travel__form div div button:hover {
+    color: white; }
+  .travel__form .travel__contenedor__cities {
+    text-align: center;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+    cursor: pointer;
+    outline: 1px solid white;
+    margin: 10px; }
+    .travel__form .travel__contenedor__cities img {
+      display: none;
+      width: 20px;
+      height: 20px; }
+  .travel__form .travel__contenedor__hotel {
+    cursor: pointer;
+    text-align: center;
+    padding: 10px;
+    margin: 5px; }
+    .travel__form .travel__contenedor__hotel img {
+      display: inline;
+      width: 30%; }
+  .travel__form .travel__form__datos {
+    display: none; }
+  .travel__form .travel__form__cities {
+    /*  display: none; */ }
+  .travel__form .travel__form__people {
+    display: none; }
+  .travel__form .travel__form__hotel {
+    display: none; }
+  .travel__form .travel__form__result {
+    display: none; }
+
 .contact__form {
   box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3); }
   .contact__form .contact__form__content div h2 {
