--- a/scss/views/_service.scss
+++ b/scss/views/_service.scss
@@ -23,8 +23,10 @@
                 
             button {
                 margin-bottom: 10px;
+                margin-left: 10px;
                 color: white;
                 border: 2px solid white;
+
                
             }
 
