--- a/scss/views/_service.scss
+++ b/scss/views/_service.scss
@@ -1,3 +1,13 @@
+#service{
+
+    /* min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center; */
+}
+
+
 .service__content{
 
     div{
