--- a/scss/views/_who.scss
+++ b/scss/views/_who.scss
@@ -1,5 +1,10 @@
 #who{
-    letter-spacing: .17px;
+    /* letter-spacing: .17px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; */
+
 }
 
 .who__content{
