se agrega el evento scroll

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import './utilities/base';
 @import './utilities/media';
+@import './utilities/animation';
 @import './layout/nav';
 @import './views/home';
 @import './views/who';
