--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ body::-webkit-scrollbar-thumb{
     .banner .container-fluid .banner__content div p {
       font-size: 1.5vw; } }
 
+.intro__text, .intro__form, .intro__contact {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: 0.5s all ease-in-out; }
+
+.intro__appear {
+  opacity: 1;
+  transform: translateY(0px); }
+
 .navBar {
   background: transparent;
   font-family: "Capriola", sans-serif;
