--- a/scss/utilities/_base.scss
+++ b/scss/utilities/_base.scss
@@ -16,7 +16,7 @@ a:hover{
 
 body{
     color: #ffffff;
-    background-color: rgba($color: #3FB0AC  , $alpha: 1);
+    // background-color: rgba($color: #3FB0AC  , $alpha: 1);
 
 }
 
