--- a/scss/views/_service.scss
+++ b/scss/views/_service.scss
@@ -1,10 +1,11 @@
 #service{
 
-    /* min-height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center; */
+    text-align: center;
+    background-color: #EDC677;
 }
 
 
