--- a/scss/views/_who.scss
+++ b/scss/views/_who.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center; */
+    background-color: #C3ADA5;
 
 }
 
@@ -13,7 +14,7 @@
 
         img{
             max-width: 100%;
-            max-height: 440px;
+            max-height: 320px;
         }
     }
 
