--- a/scss/views/_service.scss
+++ b/scss/views/_service.scss
@@ -44,7 +44,7 @@
             button:hover{
 
                 background-color: white;
-                color:  rgba($color: #6AAEBF, $alpha: 1);
+                color:  rgba($color: #edc677, $alpha: 1);
                 
             }
         }
