--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -13,6 +13,8 @@
 
 .navScroll{
   // Agregar un diseño para el nav  
+  background-color: black;
+  transition: 0.4s;
 }
 
 .navBar__content__link {
