--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -9,12 +9,16 @@
     height: 50px;
     width: 100%;
     z-index: 1;
+    transition: all 0.4s ease-in-out;
 }
 
 .navScroll{
   // Agregar un diseño para el nav  
   background-color: black;
-  transition: 0.4s;
+}
+
+#navBar__content{
+ 
 }
 
 .navBar__content__link {
@@ -22,9 +26,8 @@
   a:hover{
     
   }
-
-  
 }
+
 
 .navBar__btn__custom .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,<svg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'><path stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/></svg>");
