--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -47,8 +47,7 @@
   }
 }
 
-.banner__arrow{
-
+.banner__arrow {
   position: absolute;
   left: 0;
   bottom: 30px;
@@ -57,7 +56,7 @@
   margin: 0;
   justify-content: center;
 
-  .banner__content__arrow{
+  .banner__content__arrow {
     display: inline-block;
     width: 25px;
     height: 25px;
@@ -65,9 +64,33 @@
     border-right: 2px solid white;
     transform: rotate(135deg);
     cursor: pointer;
-    
   }
-  
-  
 }
 
+#button__top {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: all 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1;
+
+  img {
+    width: 100%;
+  }
+}
+
+#button__top:hover {
+  cursor: pointer;
+}
+
+#button__top.show {
+  opacity: 1;
+  visibility: visible;
+}
