--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,13 @@ body::-webkit-scrollbar-thumb{
     border-radius: 2px;
 }
  */
+@media (max-width: 1024px) {
+  nav div div {
+    width: 100%; } }
+
 @media (min-width: 1025px) {
+  nav div div {
+    width: 50%; }
   .banner .container-fluid .banner__content div h1 {
     font-size: 5vw; }
   .banner .container-fluid .banner__content div p {
@@ -54,7 +60,7 @@ body::-webkit-scrollbar-thumb{
   height: 50px;
   width: 100%;
   z-index: 1;
-  transition: all 0.4s ease-in-out; }
+  transition: all 0.5s; }
 
 .navScroll {
   background-color: black; }
@@ -126,7 +132,6 @@ body::-webkit-scrollbar-thumb{
     cursor: pointer; }
 
 #button__top {
-  display: inline-block;
   width: 50px;
   height: 50px;
   text-align: center;
@@ -173,7 +178,7 @@ body::-webkit-scrollbar-thumb{
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  background-color: #EDC677; }
+  background-color: #edc677; }
 
 .service__content div {
   margin: 10px;
@@ -193,14 +198,70 @@ body::-webkit-scrollbar-thumb{
       margin-left: 10px;
       color: white;
       border: 2px solid white; }
+    .service__content div span a {
+      margin-bottom: 10px;
+      margin-left: 10px;
+      color: white;
+      border: 2px solid white; }
     .service__content div span button:hover {
+      background-color: white;
+      color: #edc677; }
+    .service__content div span a:hover {
       background-color: white;
       color: #edc677; }
 
 .service__content div:hover {
   box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
-  animation: shake .4s 1;
-  animation-delay: .2s; }
+  animation: shake 0.4s 1;
+  animation-delay: 0.2s; }
+
+.modal-window {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.9);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s;
+  transform: scale(1.1);
+  color: #000; }
+  .modal-window:target {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1); }
+  .modal-window h1 {
+    font-size: 150%;
+    margin: 0 0 15px; }
+
+.modal-content {
+  width: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2em;
+  background: #ffffff; }
+
+.modal-close {
+  color: #aaa;
+  line-height: 50px;
+  font-size: 80%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  text-align: center;
+  width: 70px; }
+  .modal-close:hover {
+    color: black;
+    text-decoration: none; }
+
+.modal-window div:not(:last-of-type) {
+  margin-bottom: 15px; }
 
 @keyframes shake {
   0% {
