--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -9,7 +9,7 @@
     height: 50px;
     width: 100%;
     z-index: 1;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.5s;
 }
 
 .navScroll{
