--- a/scss/views/_service.scss
+++ b/scss/views/_service.scss
@@ -1,69 +1,140 @@
-#service{
-
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    background-color: #EDC677;
+#service {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: #edc677;
 }
 
+.service__content {
+  div {
+    margin: 10px;
+    padding: 10px;
+    cursor: pointer;
 
-.service__content{
-
-    div{
-        
-        margin: 10px;
-        padding: 10px;
-        cursor: pointer;        
-
-        h6{
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-        
-        img{
-            max-width: 100%;
-            max-height: 200px;
-            padding: 10px;
-        }
-
-        span {
-            position: relative;
-                
-            button {
-                margin-bottom: 10px;
-                margin-left: 10px;
-                color: white;
-                border: 2px solid white;
-
-               
-            }
-
-            button:hover{
-
-                background-color: white;
-                color:  rgba($color: #edc677, $alpha: 1);
-                
-            }
-        }
+    h6 {
+      margin-top: 20px;
+      margin-bottom: 20px;
     }
 
-    div:hover{
-        box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
-        animation: shake .4s 1;
-        animation-delay:.2s;
-        
+    img {
+      max-width: 100%;
+      max-height: 200px;
+      padding: 10px;
     }
-   
-}
 
+    span {
+      position: relative;
 
-@keyframes shake{
-    0%{ transform:rotate(3deg) }
-    20%{ transform:rotate(-3deg) }
-    40%{ transform:rotate(3deg) }
-    60%{ transform:rotate(-3deg) }
-    80%{ transform:rotate(3deg) }
-    100%{ transform:rotate(0) }
+      button {
+        margin-bottom: 10px;
+        margin-left: 10px;
+        color: white;
+        border: 2px solid white;
+      }
+
+      a {
+        margin-bottom: 10px;
+        margin-left: 10px;
+        color: white;
+        border: 2px solid white;
+      }
+
+      button:hover {
+        background-color: white;
+        color: rgba($color: #edc677, $alpha: 1);
+      }
+
+      a:hover {
+        background-color: white;
+        color: rgba($color: #edc677, $alpha: 1);
+      }
+    }
   }
+
+  div:hover {
+    box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
+    animation: shake 0.4s 1;
+    animation-delay: 0.2s;
+  }
+}
+
+.modal-window {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.9);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s;
+  transform: scale(1.1);
+  color: #000;
+
+  &:target {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
+  }
+
+  h1 {
+    font-size: 150%;
+    margin: 0 0 15px;
+  }
+}
+
+.modal-content {
+  width: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2em;
+  background: #ffffff;
+}
+
+.modal-close {
+  color: #aaa;
+  line-height: 50px;
+  font-size: 80%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  text-align: center;
+  width: 70px;
+
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
+}
+
+.modal-window div:not(:last-of-type) {
+  margin-bottom: 15px;
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(3deg);
+  }
+  20% {
+    transform: rotate(-3deg);
+  }
+  40% {
+    transform: rotate(3deg);
+  }
+  60% {
+    transform: rotate(-3deg);
+  }
+  80% {
+    transform: rotate(3deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
