--- a/scss/views/_contact.scss
+++ b/scss/views/_contact.scss
@@ -24,7 +24,7 @@
                 border-radius: 0; 
                 border-bottom: 2px solid white;
                 margin-bottom: 10px;
-        
+                color: white;
 
             }
 
@@ -35,6 +35,7 @@
                 box-shadow: none;
                 -moz-box-shadow: none;
                 -webkit-box-shadow: none;
+                color: white;
             }
 
             textarea{
@@ -42,6 +43,7 @@
                 border: none;
                 border-radius: 0; 
                 border-bottom: 2px solid white;
+                color: white;
             }
 
             textarea:focus {
@@ -51,6 +53,7 @@
                 box-shadow: none;
                 -moz-box-shadow: none;
                 -webkit-box-shadow: none;
+                color: white;
             }
 
             button{
