--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -32,8 +32,11 @@
   }
 
   .banner__content {
-    position: relative;
+    
     text-align: center;
+    // position: absolute;
+    // width: 100%;
+    // top: -100%;
 
     div {
       h1 {
@@ -55,6 +58,7 @@
   padding: 0;
   margin: 0;
   justify-content: center;
+  animation: arrow 2s infinite ;
 
   .banner__content__arrow {
     display: inline-block;
@@ -73,7 +77,8 @@
   text-align: center;
   border-radius: 4px;
   position: fixed;
-  bottom: 30px;
+  // bottom: 30px;
+  top: 93vh;
   right: 30px;
   transition: all 0.5s;
   opacity: 0;
@@ -92,4 +97,23 @@
 #button__top.show {
   opacity: 1;
   visibility: visible;
+}
+
+
+@keyframes arrow{
+  0%{
+    top: 90vh;
+  }
+  25%{
+    top: 93vh;
+  }
+  50%{
+    top: 90vh;
+  }
+  75%{
+    top: 93vh; 
+  }
+  100%{
+    top: 90vh;
+  }
 }
