--- a/scss/views/_travel.scss
+++ b/scss/views/_travel.scss
@@ -9,6 +9,16 @@
   pointer-events: none;
 }
 
+.form-control.is-valid, .was-validated .form-control:valid{
+  border-color: white !important;
+  box-shadow: none !important;
+}
+
+.form-control.is-invalid, .was-validated .form-control:invalid{
+  border-color: white !important;
+  box-shadow: none !important;
+}
+
 #travel {
   min-height: 100vh;
   display: flex;
@@ -70,10 +80,6 @@
   display: none;
 }
 
-/* .travel__arrows__content li:nth-of-type(1) a { color: white(0, 0%, 70%); } 
-.travel__arrows__content li:nth-of-type(2) a { color: white(0, 0%, 65%); } 
-.travel__arrows__content li:nth-of-type(3) a { color: white(0, 0%, 50%); } 
-.travel__arrows__content li:nth-of-type(4) a { color: white(0, 0%, 45%); } */
 
 .travel__form {
   box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
