--- a/scss/views/_who.scss
+++ b/scss/views/_who.scss
@@ -1,9 +1,9 @@
 #who{
-    /* letter-spacing: .17px;
+    letter-spacing: .17px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center; */
+    justify-content: center;
     background-color: #C3ADA5;
 
 }
